# corbett

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/corbett/: __init__.py  app.py  cli.py  client.py  config.py  installer.py  models.py  services.py  snowflake.py  version.py
src/corbett/apps/debugger/: __init__.py  app.py  credentials.py  handler.py
src/corbett/apps/gsheets/: __init__.py  app.py  credentials.py  handler.py
tests/: test_cli.py  test_version.py
